--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Background Generator</h1>
+	<h1>Cool Generator</h1>
 	<input type="color" name="color1" value="#f000ff">
 	<input type="color" name="color2">
 	<h2>Current CSS Background</h2>
