--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Cool Generator</h1>
 	<input type="color" name="color1" value="#f000ff">
 	<input type="color" name="color2">
-	<h2>Current CSS Background</h2>
+	<h2>Current(newBranch) CSS Background</h2>
 	<h3></h3>
 	<script type="text/javascript" src="script.js"></script>
 </body>
